@@ -1,5 +1,6 @@
 <?grid?>
-<div style="text-align: center;" id="<?$grid_name?>"> <!-- IE support -->
+<?$Misc?>
+<div style="text-align: center;" id="<?$_grid?>"> <!-- IE support -->
 <div style="<?container_style?>margin: 0 auto;<?/?>">
       <table align=center border=0 width=90% class="grid_menu">
 	   <tr>
@@ -51,6 +52,7 @@
  </tr>
  <?/cols?>
 <?/totals?>
+
 
 <?/rows?>
 
