@@ -22,63 +22,15 @@
 <body onLoad="<?$onload?>">
 
 <?FloatingFrame?>
-<div id="<?$name?>-bg"  style="position: fixed; left:0; right:0; top:0; bottom:0; filter:alpha(opacity=70); opacity: 0.7; -moz-opacity:0.7; background: white">
+<div id="<?$_name?>_bg"  style="z-index:1; display: none; position: fixed; left:0; right:0; top:0; bottom:0; filter:alpha(opacity=70); opacity: 0.7; -moz-opacity:0.7; background: white">
 
 </div>
- <table id="<?$name?>" class="msgbox" style="left: 50%; right: 50%; top:100; text-align: left; margin-left: auto; margin-right: auto; position: fixed;" border="0" cellpadding="0" cellspacing="0" width="40%" <?$opts?>>
+ <table id="<?$_name?>_fr" style="z-index:2; display: none; left: 50%; right: 50%; top:100; text-align: left; margin-left: auto; margin-right: auto; position: fixed;" border="0" cellpadding="0" cellspacing="0" width="40%" <?$opts?>>
 
-      <table class="msgbox" border="0" cellpadding="0" cellspacing="0" <?$opt?>>
-
-        <tbody>
-
-          <tr>
-
-            <td class="header"><?title?>This
-is sample box<?/?></td>
-
-          </tr>
-
-          <tr>
-
-            <td style="height: 32px;"><?content?>Welcome to our new
-template for AModules3. How cool is this, ? i think it's good enough..
-ehmm. hm.<br>
-
-            <div style="text-align: right;"><a href="shared.html#">Read
-more...</a></div>
-<?/content?>
-
-            </td>
-
-          </tr>
-
-        </tbody>
-      </table>
-      </center>
-      <?/msgbox?>
-    <tbody>
-
-          <tr>
-
-            <td ="" class="header"><?title?>You have encouraged a
-problem!<?/title?></td>
-
-          </tr>
-
-          <tr>
-
-            <td style="width: 16px;">
-            <?img?><img style="width: 16px; height: 16px;" alt="error" src="amodules3/templates/kt2/icon_error.gif"><?/img?></td>
-
-            <td style="padding: 2px"><?content?>There seems to be a problem with your hard drive. Please check it out and let us know :)<?/content?></td>
-
-          </tr>
-          <?/row?>
-          <?/rows?>
-
-        </tbody>
-      </table>
-      <?/InfoWindow?>
+ <tr><td><?$Content?>
+ </td></tr>
+ </table>
+<?/FloatingFrame?>
  
 
 <?Menu?>
