@@ -79,13 +79,13 @@ is sample box<?/?></td>
 
           <tr>
 
-            <td style="height: 32px;"><?content?>Welcome to our new
+            <td style="height: 32px;"><?Content?><?content?>Welcome to our new
 template for AModules3. How cool is this, ? i think it's good enough..
 ehmm. hm.<br>
 
             <div style="text-align: right;"><a href="shared.html#">Read
 more...</a></div>
-<?/content?>
+<?/content?><?/Content?>
 
             </td>
 
